--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,12 @@ slint = "1.7.2"
 
 [build-dependencies]
 slint-build = "1.7.2"
+
+[dependencies]
+pdfium-render = "0.11"
+
+[dependencies.pdfium-render]
+features = ["pdfium-binary"]
+
+[dependencies]
+dotenv = "0.15"
