--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ serde_json = "1.0.133"
 slint = "1.8.0"
 dotenv = "0.15"
 pdfium-render = "0.8.26"
+image = "0.25"
 
 [build-dependencies]
 slint-build = "1.8.0"
